--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5334,5 +5334,13 @@
         "type": "int"
       }
     }
-  }
+  },
+  "noSavedActivitiesYet": "Activities will appear here once they are completed and saved.",
+  "practiceActivityCompleted": "Practice activity completed",
+  "changeCourse": "Change course",
+  "changeCourseDesc": "Here you can change this course's course plan.",
+  "introChatTitle": "Create Introductions Chat",
+  "introChatDesc": "Anyone in the space can post.",
+  "announcementsChatTitle": "Announcements Chat",
+  "announcementsChatDesc": "Only space admin can post."
 }
