--- a/lib/l10n/intl_bo.arb
+++ b/lib/l10n/intl_bo.arb
@@ -4707,7 +4707,7 @@
   "joinPublicTrip": "མི་ཚེས་ལ་ལོག་འབད།",
   "startOwnTrip": "ངེད་རང་གི་ལོག་ལ་སྦྱོར་བཅོས།",
   "@@locale": "bo",
-  "@@last_modified": "2025-11-19 10:06:54.787613",
+  "@@last_modified": "2025-12-01 12:40:47.506429",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12670,6 +12670,61 @@
     "placeholders": {}
   },
   "@teacherModeDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "failedToLoadFeedback": "Ndaŋa tolo feedback.",
+  "unreadPlus": "99+",
+  "highlightVocabTooltip": "Ndaŋa hightlitaŋa vocab words below by sending them or practicing with them in the chat",
+  "noSavedActivitiesYet": "Activities will appear here once they are completed and saved.",
+  "@failedToLoadFeedback": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unreadPlus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "Bohor kurs",
+  "changeCourseDesc": "Dina ieu anjeun tiasa ngarobih rencana kursus ieu.",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Praktik aktiviti telah diselesaikan",
+  "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "Buat Obrolan Pengenalan",
+  "introChatDesc": "Sesiapa dalam ruang boleh menghantar.",
+  "announcementsChatTitle": "Obrolan Pengumuman",
+  "announcementsChatDesc": "Hanya admin ruang yang boleh menghantar.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
