--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-19 10:05:24.832279",
+  "@@last_modified": "2025-12-01 12:39:24.159740",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -11937,6 +11937,61 @@
     "placeholders": {}
   },
   "@teacherModeDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "failedToLoadFeedback": "피드백을 불러오는 데 실패했습니다.",
+  "unreadPlus": "99+",
+  "highlightVocabTooltip": "아래의 목표 어휘 단어를 강조 표시하려면 채팅에서 보내거나 연습하세요.",
+  "noSavedActivitiesYet": "활동이 완료되고 저장되면 여기에 나타납니다.",
+  "@failedToLoadFeedback": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unreadPlus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "강좌 변경",
+  "changeCourseDesc": "여기에서 이 강좌의 강좌 계획을 변경할 수 있습니다.",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "연습 활동이 완료되었습니다",
+  "@practiceActivityCompleted": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "introChatTitle": "소개 채팅 만들기",
+  "introChatDesc": "공간의 누구나 게시할 수 있습니다.",
+  "announcementsChatTitle": "공지사항 채팅",
+  "announcementsChatDesc": "오직 공간 관리자만 게시할 수 있습니다.",
+  "@introChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@introChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@announcementsChatDesc": {
     "type": "String",
     "placeholders": {}
   }
